Fix contrast issue with filter headers in django admin

--- a/src/registrar/assets/sass/_theme/_admin.scss
+++ b/src/registrar/assets/sass/_theme/_admin.scss
@@ -110,7 +110,9 @@ html[data-theme="light"] {
     .change-list .usa-table--borderless thead th,
     .change-list .usa-table thead td, 
     .change-list .usa-table thead th,
-    body.dashboard {
+    body.dashboard,
+    body.change-list,
+    body.change-form {
         color: var(--body-fg);
     }
 }
@@ -122,7 +124,9 @@ html[data-theme="dark"] {
     .change-list .usa-table--borderless thead th,
     .change-list .usa-table thead td, 
     .change-list .usa-table thead th,
-    body.dashboard {
+    body.dashboard,
+    body.change-list,
+    body.change-form {
         color: var(--body-fg);
     }
 }
